--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 appdirs==1.4.3
+cairocffi==0.8.0
+CairoSVG==2.0.3
+cffi==1.10.0
 click==6.7
+cssselect==1.0.1
 Flask==0.12.2
 itsdangerous==0.24
 Jinja2==2.9.6
+lxml==3.8.0
 MarkupSafe==1.0
+olefile==0.44
 packaging==16.8
+Pillow==4.1.1
+pycparser==2.17
 pygal==2.3.1
 pyparsing==2.2.0
 pyserial==3.3
 six==1.10.0
+tinycss==0.4
 Werkzeug==0.12.2
